[package]
name = "m-to-do"
version = "0.1.0"
authors = ["Ilex Ng <ilex.ng@scmp.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # anyhow crate is that it provides its own error type. This type has pretty-printing properties and can easily be converted from other errors,
home = "0.5" # <--- Add `home` to our project dependencies.
structopt = "0.3"
serde_json = "1.0"    # Add serde_json.

[dependencies.serde]  # Add serde in its own section.
version = "1.0"
features = ["derive"] # We'll need the derive feature.

[dependencies.chrono]
version = "0.4"
features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.

[profile.dev]
split-debuginfo = "unpacked"
